--- a/src/styles/Block.module.css
+++ b/src/styles/Block.module.css
@@ -9,6 +9,7 @@
     justify-content: space-evenly;
     padding: 20px 0;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin: 10px 0px;
 }
 
 .title {
