--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,14 +2,14 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  min-height: 100vh;
   width: 100%;
   background-color: #F5F5F5; 
 }
 
 .header {
   width: 100%;
-  height: 10%;
+  height: 100px;
   border-bottom: 1px solid #A9A9A9;
   display: flex;
   flex-direction: column;
@@ -21,10 +21,19 @@
 }
 
 .blocksDiv {
+  margin-top: 50px;
   width: 100%;
-  height: 90%;
+  height: calc(90vh - 200px);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
+}
+
+.counterText {
+  font-family: 'Roboto', sans-serif;
+  font-size: 20px;
+  font-weight: 500;
+  margin: 50px 0px;
+  text-align: center;
 }
