--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -23,7 +23,7 @@
 .blocksDiv {
   margin-top: 50px;
   width: 100%;
-  height: calc(90vh - 200px);
+  height: calc(90vh - 210px);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -34,6 +34,15 @@
   font-family: 'Roboto', sans-serif;
   font-size: 20px;
   font-weight: 500;
-  margin: 50px 0px;
+  margin-top: 50px;
+  text-align: center;
+}
+
+.warning {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+  font-weight: 600;
+  color: #ff0000;
+  margin: 10px 0px 50px;
   text-align: center;
 }
